add a new entry

--- a/log4j.properties
+++ b/log4j.properties
@@ -46,6 +46,7 @@ log4j.logger.edu.brown.markov=INFO
 log4j.logger.edu.brown.mappings=INFO
 log4j.logger.edu.brown.costmodel=INFO
 log4j.logger.edu.brown.designer=INFO
+log4j.logger.edu.brown.catalog=INFO
 
 ## ----------------------------------------------------------------------------
 ## FAST LOGGING
