update to support frontend trigger mechanism turn on and off

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -12,6 +12,10 @@ global.sstore = true
 
 global.sstore_scheduler = false
 
+global.sstore_frontend_trigger = true
+
+global.weak_recovery = true
+
 # Temporary Directory
 # global.temp_dir = ${output.dir}/
 global.temp_dir = .
