--- a/properties/default.properties
+++ b/properties/default.properties
@@ -10,7 +10,7 @@
 ## ------------------------------------------------------------
 global.sstore = true
 
-global.sstore_scheduler = false
+global.sstore_scheduler = true
 
 global.sstore_frontend_trigger = true
 
