commandlog_groupcommit variable added. experimental, may break.

--- a/properties/default.properties
+++ b/properties/default.properties
@@ -112,6 +112,9 @@ site.commandlog_enable     = false
 # Timeout in milliseconds before group commit buffer flushes, if it does not fill
 site.commandlog_timeout    = 500
 
+# Number of commands to group commit before the buffer fills
+site.commandlog_enable     = -1
+
 # Enable the anti-cache feature.
 #site.anticache_enable      = false
 
