minor debugging changes

--- a/log4j.properties
+++ b/log4j.properties
@@ -39,6 +39,7 @@ log4j.logger.org.voltdb.VoltSystemProcedure=INFO
 log4j.logger.org.voltdb.client=INFO
 log4j.logger.org.voltdb.compiler.DDLCompiler=INFO
 log4j.logger.org.voltdb.planner=INFO
+log4j.logger.org.voltdb.StoredProcedureInvocation=INFO
 
 ## Research Projects
 log4j.logger.edu.brown.hstore.estimators=INFO
