--- a/log4j.properties
+++ b/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
 log4j.logger.edu.brown.hstore.WorkflowScheduler=INFO
 
 ## H-Store Internals
-log4j.logger.edu.brown.hstore.HStoreSite=INFO
+log4j.logger.edu.brown.hstore.HStoreSite=DEBUG
 log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
 log4j.logger.edu.brown.hstore.PartitionExecutor=INFO
 log4j.logger.edu.brown.hstore.TransactionInitializer=INFO
