Add a sleep when there's no work and no speculative execution.
More adjust of debug info.

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -27,7 +27,7 @@ warehouse_pairing       = false
 
 # Only execute NewOrder txns
 # Deprecated: Use ${client.weights}
-neworder_only           = false
+neworder_only           = true
 
 # Percentage of NewOrder txns that will abort [0-100%]. Default is 1%
 # neworder_abort        = 1
@@ -42,7 +42,7 @@ neworder_only           = false
 
 # Whether to allow NewOrder txns to touch multiple partitions
 # You can control the percentage of these txns with neworder_multip_mix
-neworder_multip         = true
+neworder_multip         = false
 
 # The percentage of NewOrder txns that touch multiple partitions.
 # Setting it to -1 will use the default configuration
