--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -27,7 +27,7 @@ warehouse_pairing       = false
 
 # Only execute NewOrder txns
 # Deprecated: Use ${client.weights}
-neworder_only           = true
+neworder_only           = false
 
 # Percentage of NewOrder txns that will abort [0-100%]. Default is 1%
 # neworder_abort        = 1
@@ -64,7 +64,7 @@ neworder_skew_warehouse = false
 payment_only            = false
 
 # Whether to allow Payment txns to touch multiple partitions.
-payment_multip          = true
+payment_multip          = false
 
 # The percentage of Payment txns that touch multiple partitions.
 # Setting it to -1 will use the default configuration
