add benchmark for demux+move

--- a/log4j.properties
+++ b/log4j.properties
@@ -14,13 +14,13 @@ log4j.appender.A1.layout.ConversionPattern=%d{ABSOLUTE} [%t] (%F:%L) %-5p - %m%n
 log4j.logger.edu.brown.hstore.WorkflowScheduler=INFO
 
 ## H-Store Internals
-log4j.logger.edu.brown.hstore.HStoreSite=INFO
-log4j.logger.edu.brown.hstore.HStoreCoordinator=INFO
-log4j.logger.edu.brown.hstore.PartitionExecutor=INFO
-log4j.logger.edu.brown.hstore.TransactionInitializer=INFO
+log4j.logger.edu.brown.hstore.HStoreSite=DEBUG
+log4j.logger.edu.brown.hstore.HStoreCoordinator=DEBUG
+log4j.logger.edu.brown.hstore.PartitionExecutor=DEBUG
+log4j.logger.edu.brown.hstore.TransactionInitializer=DEBUG
 log4j.logger.edu.brown.hstore.TransactionQueueManager=INFO
 log4j.logger.edu.brown.hstore.PartitionLockQueue=INFO
-log4j.logger.edu.brown.hstore.BatchPlanner=INFO
+log4j.logger.edu.brown.hstore.BatchPlanner=DEBUG
 log4j.logger.edu.brown.hstore.AntiCacheManager=INFO
 log4j.logger.edu.brown.hstore.txns=INFO
 log4j.logger.edu.brown.hstore.txns.DependencyTracker=INFO
