Replace set to sort in EvictionIterator.

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -7,12 +7,12 @@ workload.ignore     = LoadWarehouse,LoadWarehouseReplicated
 
 ## These parameters will make the benchmark use one WAREHOUSE
 ## and one loader thread per partition in the cluster
-warehouse_per_partition = true
+warehouse_per_partition = false
 loadthread_per_warehouse = true
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-# warehouses = 100
+warehouses = 80
 # loadthreads = 4
 
 ## Testing Options
