--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,8 @@ src/catgen/out
 .project
 .cproject
 .settings
+
+## -------------------------------
+## cscope files
+## -------------------------------
+cscope.*
