--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -42,7 +42,7 @@ neworder_only           = false
 
 # Whether to allow NewOrder txns to touch multiple partitions
 # You can control the percentage of these txns with neworder_multip_mix
-neworder_multip         = true
+neworder_multip         = false
 
 # The percentage of NewOrder txns that touch multiple partitions.
 # Setting it to -1 will use the default configuration
@@ -64,7 +64,7 @@ neworder_skew_warehouse = false
 payment_only            = false
 
 # Whether to allow Payment txns to touch multiple partitions.
-payment_multip          = true
+payment_multip          = false 
 
 # The percentage of Payment txns that touch multiple partitions.
 # Setting it to -1 will use the default configuration
