--- a/build.xml
+++ b/build.xml
@@ -2288,7 +2288,7 @@ UTILITIES
     </java>
 
     <echo>Creating stats file for workload '${target.workload}' using '${benchmark.tablestats}' as base</echo>
-    <antcall target="stats">
+    <antcall target="workload-stats">
         <param name="workload" value="${files.workloads.dir}/${target.workload}.trace.gz" />
         <param name="stats" value="${benchmark.tablestats}" />
         <param name="output" value="${files.stats.dir}/${project}.stats" />
