--- a/build.xml
+++ b/build.xml
@@ -891,6 +891,7 @@ NATIVE EE STUFF
         <arg value="ANTICACHE_BUILD=${site.anticache_build}" />
         <arg value="ANTICACHE_REVERSIBLE_LRU=${site.anticache_reversible_lru}" />
         <arg value="ANTICACHE_NVM=${site.anticache_nvm}" />
+        <arg value="ANTICACHE_COUNTER=${site.anticache_counter}" />
         <arg value="ANTICACHE_TIMESTAMPS=${site.anticache_timestamps}" />
         <arg value="ANTICACHE_TIMESTAMPS_PRIME=${site.anticache_timestamps_prime}" />
         <arg value="${build}" />
