Change back the default TPC-C and TM1 settings.

--- a/properties/benchmarks/tpcc.properties
+++ b/properties/benchmarks/tpcc.properties
@@ -7,13 +7,13 @@ workload.ignore     = LoadWarehouse,LoadWarehouseReplicated
 
 ## These parameters will make the benchmark use one WAREHOUSE
 ## and one loader thread per partition in the cluster
-#warehouse_per_partition = true
-#loadthread_per_warehouse = true
+warehouse_per_partition = true
+loadthread_per_warehouse = true
 
 ## Or you can use these parameters to specifically
 ## control the number of warehouses and/or load threads
-warehouses = 80
-loadthreads = 8
+#warehouses = 80
+#loadthreads = 8
 
 ## Testing Options
 ## See src/benchmarks/org/voltdb/benchmarks/tpcc/TPCCConfig.java
